k8s/ingress.yaml
# https://github.com/kubernetes/ingress-gce/blob/master/docs/annotations.md
# needs to be identical to the ingress.yaml in the nuxt-client
apiVersion: networking.k8s.io/v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: client-ingress
    annotations:
      kubernetes.io/ingress.class: "nginx"
  spec:
    tls:
    - hosts:
      - $HOSTNAME
      secretName: $CERT_NAME
    rules:
      - host: $HOSTNAME
        http:
          paths:
            - backend:
                serviceName: nuxt-client
                servicePort: 80
              path: /
              pathType: Prefix
